# motion_viz

./: .gitignore  README.md  pyproject.toml
data/bvh/: BentForward_SR.bvh  Combo_Punch_less.bvh  S3P03R3.bvh  test.bvh
data/csv/: .~lock.test.csv#  test.csv
data/fbx/: test.fbx  test_2.fbx  test_3.fbx
data/json/: 100style.json  Amature_skeleton_groundtruth.json  BentForward_SR_skeleton_groundtruth.json  Combo_Punch_skeleton.json  Combo_Punch_skeleton_groundtruth.json  S3P03R3_skeleton_groundtruth.json  example_skeleton.json  test_skeleton - Kopie.json  test_skeleton.json
data/numpy/: Combo_Punch.npy  Combo_Punch_less.bvh.npy  example.npy  test.npy
data/numpy_groundtruth/: Amature.npy  BentForward_SR.npy  Combo_Punch.npy  S3P03R3.npy  test.npy
src/backend/: bvh_parser.py  main.py  utils.py
src/backend/api/: motion.py
src/backend/motion_parser/: bvh_parser.py  bvh_parser_2.py  csv_parser.py
src/frontend/: index.html  package-lock.json  package.json
src/frontend/src/: App.jsx  app.js  custom.css  main.js
src/frontend/src/components/: camera.js  coordsystem.js  lights.js  orbitcontrol.js  scene.js  timeline.js  timelineFBX.js  timelineNumpy.js  torus.js
src/frontend/src/motion_loader/: bvh_loader.js  fbx_loader.js  npy_loader.js
src/frontend/src/motion_player/: bvh_player.js  fbx_player.js  npy_player.js
src/frontend/src/motionplayer/: bvhPlayer.js  fbxPlayer.js  numpyPlayer.js
src/frontend/src/system/: loop.js  renderer.js  resizer.js
src/frontend/src/viewer/: Scene.jsx  (+3 more)
src/motion_viz/: bvh_parser.py  main.py
src/motion_viz/api/: motion.py
